# multi-agent-research-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  PDF_OUTPUT_GUIDE.md  README.md  config.py  crew.py  docker-compose.yml  main.py  output_formatter.py  pdf_formatter.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: aws-deploy.yml  ci.yml
agents/: __init__.py  examiner_agent.py  reporter_agent.py  researcher_agent.py  simplifier_agent.py  student_agent.py  teacher_agent.py
app/: __init__.py  factory.py
app/core/: __init__.py  logging.py  security.py  settings.py
app/database/: models.py  repository.py
app/models/: schemas.py
app/services/: __init__.py  citations.py  credibility.py  diagrams.py  events.py  exporters.py  knowledge.py  research.py
aws/: ecs-task-definition.json
backend/: api.py  requirements.txt
backend/outputs/: report_1782725114.md  report_1782725277.md  report_1782725770.md  report_1782725851.md  report_1782726481.md  report_1782727544.md  report_1782727569.md
data/: research_platform.db
docs/: API_GUIDE.md  ARCHITECTURE.md  AWS_DEPLOYMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  PROMPTS.md  ROADMAP.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
outputs/: sample_report.md
tasks/: __init__.py  exam_task.py  notes_task.py  report_task.py  research_task.py  simplify_task.py  teaching_task.py
tests/: conftest.py  test_api.py  test_database.py  test_services.py
tools/: __init__.py  search_tool.py
