[project]
name = "multi-agent-research-assistant"
version = "1.0.0"
description = "A multi-agent research assistant using CrewAI"
requires-python = ">=3.10"
dependencies = [
    "crewai[anthropic]",
    "crewai-tools",
    "python-dotenv",
    "openai",
    "fastapi",
    "uvicorn[standard]",
    "reportlab",
]

[tool.uv]
