[project]
name = "multi-agent-research-assistant"
version = "1.0.0"
description = "ResearchOS — an enterprise multi-agent research platform"
requires-python = ">=3.10"
dependencies = [
    "crewai[anthropic]",
    "crewai-tools",
    "python-dotenv",
    "openai",
    "fastapi",
    "uvicorn[standard]",
    "reportlab",
    "sqlalchemy>=2.0",
    "PyJWT>=2.8",
    "httpx>=0.27",
    "markdown>=3.6",
    "python-docx>=1.1",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
vectors = [
    "chromadb>=0.5",
    "faiss-cpu>=1.8",
    "qdrant-client>=1.10",
    "pinecone>=5.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
